# FastApi-Clean

./: .env  README.md  pyproject.toml
app/: main.py  requirements.txt
app/configs/: environment.py
app/models/: __init__.py  city_model.py  client_model.py  department_model.py
app/repositories/: city_repository.py  client_repository.py  deparment_repository.py
app/routers/v1/: __init__.py  city_router.py  client_router.py  department_router.py
app/schemas/pydantic/: __init__.py  city_schema.py  client_schema.py  deparment_schema.py
app/services/: AuthorService.py  BookService.py
kafka/: README.md  config.py  main.py  router.py
kafka/bitnami/kafka/data/: meta.properties  replication-offset-checkpoint
